--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -202,7 +202,7 @@
       <DependentUpon>TabCtrlPagePlantsSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="Funcs.cs" />
-    <Compile Include="IniFile\ReadFile.cs" />
+    <Compile Include="IniFile\FileInterface.cs" />
     <Compile Include="IniFile\Sections\DatabaseSection.cs" />
     <Compile Include="IniFile\Sections\GridSection.cs" />
     <Compile Include="IniFile\Sections\PrinterSection.cs" />
@@ -277,7 +277,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="NpCommon.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
