--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -15,6 +15,7 @@ IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial
 [DISPLAY]
 ; カラースタイル（0：白、1：黒）
 ColorStyle=0
+ToningAppKeyword=生,ネタ
 
 [PRINTER]
 X=55
