--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ SupervisorIfSim/obj/Debug/SupervisorIfSim.exe
 SupervisorIfSim/obj/Debug/SupervisorIfSim.FrmMain.resources
 SupervisorIfSim/obj/Debug/SupervisorIfSim.pdb
 SupervisorIfSim/obj/Debug/SupervisorIfSim.Properties.Resources.resources
+.vs/NpToningSystem/project-colors.json
