--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ SupervisorIfSim/obj/Debug/SupervisorIfSim.exe
 SupervisorIfSim/obj/Debug/SupervisorIfSim.FrmMain.resources
 SupervisorIfSim/obj/Debug/SupervisorIfSim.pdb
 SupervisorIfSim/obj/Debug/SupervisorIfSim.Properties.Resources.resources
+OrderManager/bin/Debug/Log/OrderManager20220513.log
+OrderManager/obj/Debug/NipponPaint.OrderManager.Dialogs.FrmOrderChangeStatusSelectItem.resources
