設備名をINIから取得するように修正

--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -205,6 +205,7 @@
     <Compile Include="IniFile\FileInterface.cs" />
     <Compile Include="IniFile\Sections\DatabaseSection.cs" />
     <Compile Include="IniFile\Sections\DisplaySection.cs" />
+    <Compile Include="IniFile\Sections\FacilitySection.cs" />
     <Compile Include="IniFile\Sections\GridSection.cs" />
     <Compile Include="IniFile\Sections\PrinterSection.cs" />
     <Compile Include="IniFile\Settings.cs" />
