--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -12,9 +12,10 @@ NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initi
 NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=PC-ASAHINA,1432
 IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=PC-ASAHINA,1432
 
+[FACILITY]
+Plant=RF1
+
 [DISPLAY]
-; カラースタイル（0：白、1：黒）
-ColorStyle=0
 ToningAppKeyword=生,ネタ
 
 [PRINTER]
