ラベル出力ライブラリ作成

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ MlController/obj/Debug/MlController.pdb
 MlController/bin/Debug/MLComponent.dll
 MlController/bin/Debug/MLComponent.XmlSerializers.dll
 MlController/obj/Debug/MlController.csproj.CopyComplete
+MlController/obj/Debug/DesignTimeResolveAssemblyReferences.cache
