新規プロセス作成

--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -208,6 +208,7 @@
     <Compile Include="IniFile\Sections\FacilitySection.cs" />
     <Compile Include="IniFile\Sections\GridSection.cs" />
     <Compile Include="IniFile\Sections\PrinterSection.cs" />
+    <Compile Include="IniFile\Sections\SupervisorInterfaceSection.cs" />
     <Compile Include="IniFile\Settings.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Messages.cs" />
