--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -11,6 +11,7 @@
 NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=PC-ASAHINA,1432
 NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=PC-ASAHINA,1432
 IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=PC-ASAHINA,1432
+SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=PC-ASAHINA,1432
 
 [FACILITY]
 Plant=RF1
@@ -24,3 +25,6 @@ X=55
 Y=0
 
 [GRID]
+
+[SUPERVISOR_IF]
+TickTime=5
