--- a/SupervisorPcInterface/SupervisorPcInterface.csproj
+++ b/SupervisorPcInterface/SupervisorPcInterface.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0100960E-F856-440A-9B2A-B30EABF50400}</ProjectGuid>
+    <ProjectGuid>{69849432-B5DE-4C27-9518-B7BB08AA2620}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>NipponPaint.SupervisorIfSim</RootNamespace>
-    <AssemblyName>SupervisorIfSim</AssemblyName>
+    <RootNamespace>NipponPaint.SupervisorPcInterface</RootNamespace>
+    <AssemblyName>SupervisorPcInterface</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,7 +34,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,19 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Data\DropDownItem.cs" />
-    <Compile Include="Data\DropDownRow.cs" />
-    <Compile Include="Data\RadioButtonItem.cs" />
-    <Compile Include="Data\TextBoxItem.cs" />
-    <Compile Include="Dialogs\FrmEdit.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Dialogs\FrmEdit.Designer.cs">
-      <DependentUpon>FrmEdit.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Dialogs\FrmEdit.resx">
-      <DependentUpon>FrmEdit.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NpCommon\NpCommon.csproj">
-      <Project>{38C0C8D0-5E89-449A-8F70-0D58D64C70EC}</Project>
+      <Project>{38c0c8d0-5e89-449a-8f70-0d58d64c70ec}</Project>
       <Name>NpCommon</Name>
     </ProjectReference>
   </ItemGroup>
