Revert "Merge pull request #26 from spread-satou/feature_satou"
This reverts commit 092fd3f331b7afa8ec4b2b8516596e67e9cff017, reversing
changes made to 5bddb81a71762b86e137ed3036e973b6d1f3885a.

--- a/SupervisorIfSim/SupervisorIfSim.csproj
+++ b/SupervisorIfSim/SupervisorIfSim.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0100960E-F856-440A-9B2A-B30EABF50400}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>NipponPaint.SupervisorIfSim</RootNamespace>
+    <RootNamespace>SupervisorIfSim</RootNamespace>
     <AssemblyName>SupervisorIfSim</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -82,7 +82,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
