--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Database\ParameterItem.cs" />
     <Compile Include="Database\SqlBase.cs" />
+    <Compile Include="Database\Sql\NpMain\Cans.cs" />
     <Compile Include="Database\Sql\NpMain\Colors.cs" />
     <Compile Include="Database\Sql\NpMain\Delivery.cs" />
     <Compile Include="Database\Sql\NpMain\HgLog.cs" />
