処理速度が速くなるように修正

--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -1,17 +1,8 @@
 [DATABASE]
-;NP_ORDERConnStr=Provider=SQLOLEDB;Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=CPSCOLOR\SQLEXPRESS
-;NP_MAINConnStr=Provider=SQLOLEDB;Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=CPSCOLOR\SQLEXPRESS
-;IOSSUPConnStr=Provider=SQLOLEDB;Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=CPSCOLOR\SQLEXPRESS
-;NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=DESKTOP-SATOU\SQLEXPRESS,49172
-;NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=DESKTOP-SATOU\SQLEXPRESS,49172
-;IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=DESKTOP-SATOU\SQLEXPRESS,49172
-;NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=DESKTOP-YOSHIMURA\SQLEXPRESS,1433
-;NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=DESKTOP-YOSHIMURA\SQLEXPRESS,1433
-;IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=DESKTOP-YOSHIMURA\SQLEXPRESS,1433
-NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=PC-ASAHINA,1432
-NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=PC-ASAHINA,1432
-IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=PC-ASAHINA,1432
-SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=PC-ASAHINA,1432
+NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=NOTEPC-SATOU,1433
+NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=NOTEPC-SATOU,1433
+IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=NOTEPC-SATOU,1433
+SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=NOTEPC-SATOU,1433
 
 [FACILITY]
 Plant=RF1
@@ -27,4 +18,4 @@ Y=0
 [GRID]
 
 [SUPERVISOR_IF]
-TickTime=5
+TickTime=15
