--- a/NpCommon/NpCommon.ini
+++ b/NpCommon/NpCommon.ini
@@ -1,8 +1,12 @@
 [DATABASE]
-NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=NOTEPC-SATOU,1433
-NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=NOTEPC-SATOU,1433
-IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=NOTEPC-SATOU,1433
-SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=NOTEPC-SATOU,1433
+;NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=NOTEPC-SATOU,1433
+;NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=NOTEPC-SATOU,1433
+;IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=NOTEPC-SATOU,1433
+;SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=NOTEPC-SATOU,1433
+NP_ORDERConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=ORDER_RF1;Data Source=PC-ASAHINA,1432
+NP_MAINConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=NP_MAIN;Data Source=PC-ASAHINA,1432
+IOSSUPConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=IOSSUP_RF1;Data Source=PC-ASAHINA,1432
+SPCConnStr=Password=cps_pwd2000;Persist Security Info=True;User ID=sa;Initial Catalog=SUPERVISOR_IF;Data Source=PC-ASAHINA,1432
 
 [FACILITY]
 Plant=RF1
