缶タブ、缶の再製造ダイアログ作成
・SQL
 　NpMain.cs　166～256行
・更新メソッド
　SqlBase.cs　 1266～1272行
・ダイアログ
　FrmRemanufacturedCan.cs　新規作成
　FrmRemanufacturedCan.Designer.cs　新規作成
　FrmRemanufacturedCan.resx　新規作成
・缶タブ内のボタン活性非活性
　FrmMain.cs　2279～2299行

・缶タブ内のボタンクリックメソッド
　FrmMain.cs　1057～1115行

・缶の再製造　ViewModel
　RemanufactureDanData.cs　新規作成

--- a/OrderManager/OrderManager.csproj
+++ b/OrderManager/OrderManager.csproj
@@ -104,6 +104,12 @@
     <Compile Include="Dialogs\FrmOrderChangeStatusSelectItem.Designer.cs">
       <DependentUpon>FrmOrderChangeStatusSelectItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\FrmRemanufacturedCan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\FrmRemanufacturedCan.Designer.cs">
+      <DependentUpon>FrmRemanufacturedCan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\FrmSelectDataNumber.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -211,6 +217,7 @@
     <Compile Include="ViewModels\CCMSimulatorData.cs" />
     <Compile Include="ViewModels\LabelEdit.cs" />
     <Compile Include="ViewModels\LabelTypeData.cs" />
+    <Compile Include="ViewModels\RemanufacturedCanData.cs" />
     <Compile Include="ViewModels\SelectDataNumber.cs" />
     <Compile Include="ViewModels\InitialSettingData.cs" />
     <Compile Include="ViewModels\LabelPrintData.cs" />
@@ -247,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FrmOrderChangeStatusSelectItem.resx">
       <DependentUpon>FrmOrderChangeStatusSelectItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\FrmRemanufacturedCan.resx">
+      <DependentUpon>FrmRemanufacturedCan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FrmSelectDataNumber.resx">
       <DependentUpon>FrmSelectDataNumber.cs</DependentUpon>
