詳細タブ　色名セパレータ
・ユーザーコントロール　FindControlメソッドへ適用
　- SqlBase.cs
・ユーザーコントロール作成
　- 新規　LabelTextSeprate
・Panel表示
　- PanelBorder.cs
・表示設定
　- Funcs.cs
・セパレータ
　移動　保存
　- Main.cs 1350～1390行　2401～2424行
　適用　表示
　- Main.cs 1509～1522行

--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -94,6 +94,12 @@
     <Compile Include="FormControls\LabelTextButton.Designer.cs">
       <DependentUpon>LabelTextButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormControls\LabelTextSeparate.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FormControls\LabelTextSeparate.Designer.cs">
+      <DependentUpon>LabelTextSeparate.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormControls\PanelBorder.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -223,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormControls\LabelTextButton.resx">
       <DependentUpon>LabelTextButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormControls\LabelTextSeparate.resx">
+      <DependentUpon>LabelTextSeparate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormControls\PanelBorder.resx">
       <DependentUpon>PanelBorder.cs</DependentUpon>
