不要ファイル

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ SupervisorPcInterface/obj/Debug/SupervisorPcInterface.exe
 SupervisorPcInterface/obj/Debug/SupervisorPcInterface.FrmMain.resources
 SupervisorPcInterface/obj/Debug/SupervisorPcInterface.pdb
 SupervisorPcInterface/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+.vs/NpToningSystem/FileContentIndex/1e599423-34ba-489a-bf68-7d177910de3c.vsidx
