通信系プロジェクトの追加

--- a/serialDLL/serialDLL/serialDLL/serialDLL/serialDLL.vcxproj
+++ b/serialDLL/serialDLL/serialDLL/serialDLL/serialDLL.vcxproj
@@ -131,7 +131,8 @@
       <EnableUAC>false</EnableUAC>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(OutDir)\serialDLL.dll" "$(SolutionDir)..\..\serialApp\serialApp\bin\Debug\net6.0"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
