--- a/ftpDLL/ftpDLL/ftpDLL/ftpDLL.vcxproj
+++ b/ftpDLL/ftpDLL/ftpDLL/ftpDLL.vcxproj
@@ -131,7 +131,8 @@
       <EnableUAC>false</EnableUAC>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(OutDir)ftpDLL.dll" "$(SolutionDir)..\ftpApp\ftpApp\bin\Debug\net6.0"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
