--- a/NpCommon/NpCommon.csproj
+++ b/NpCommon/NpCommon.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Database\Sql\Order\Defaults.cs" />
     <Compile Include="Database\Sql\Order\Formal.cs" />
     <Compile Include="Database\Sql\Order\LabelEdit.cs" />
+    <Compile Include="Database\Sql\Order\Labels.cs" />
     <Compile Include="Database\Sql\Order\LabelSelections.cs" />
     <Compile Include="Database\Sql\SupervisorPc\Func.cs" />
     <Compile Include="Database\Sql\SupervisorPc\MergeItemDefine.cs" />
