--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,80 @@ SupervisorPcInterface/obj/Debug/SupervisorPcInterface.FrmMain.resources
 SupervisorPcInterface/obj/Debug/SupervisorPcInterface.pdb
 SupervisorPcInterface/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
 .vs/NpToningSystem/FileContentIndex/1e599423-34ba-489a-bf68-7d177910de3c.vsidx
+.vs/NpToningSystem/DesignTimeBuild/.dtbcache.v2
+.vs/NpToningSystem/FileContentIndex/212f1d31-03aa-4f3a-b2bb-1f49d9af9492.vsidx
+.vs/NpToningSystem/FileContentIndex/read.lock
+.vs/ProjectEvaluation/nptoningsystem.metadata.v2
+.vs/ProjectEvaluation/nptoningsystem.projects.v2
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.AssemblyInfo.cs
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.AssemblyInfoInputs.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.AssemblyReference.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.GeneratedMSBuildEditorConfig.editorconfig
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpApp/ftpApp/obj/project.nuget.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.AssemblyInfo.cs
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.AssemblyInfoInputs.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.AssemblyReference.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.GeneratedMSBuildEditorConfig.editorconfig
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/project.nuget.cache
+NpCommon/obj/Debug/_IsIncrementalBuild
+NpCommon/obj/Debug/NipponPaint.NpCommon.FormControls.LabelStatusRadioButtons.resources
+NpCommon/obj/Debug/NipponPaint.NpCommon.FormControls.LabelTextSeparate.resources
+OrderManager/bin/Debug/Log/OrderManager20220607.log
+OrderManager/obj/Debug/_IsIncrementalBuild
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/project.nuget.cache
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
