--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,36 @@ SupervisorPcInterface/obj/Debug/SupervisorPcInterface.FrmMain.resources
 SupervisorPcInterface/obj/Debug/SupervisorPcInterface.pdb
 SupervisorPcInterface/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
 .vs/NpToningSystem/FileContentIndex/1e599423-34ba-489a-bf68-7d177910de3c.vsidx
+.vs/NpToningSystem/DesignTimeBuild/.dtbcache.v2
+.vs/NpToningSystem/FileContentIndex/5d2040a0-4738-40ad-abdc-dc32a7b00cc8.vsidx
+.vs/NpToningSystem/FileContentIndex/read.lock
+.vs/NpToningSystem/v17/Browse.VC.db
+.vs/NpToningSystem/v17/fileList.bin
+.vs/NpToningSystem/v17/Solution.VC.db
+.vs/ProjectEvaluation/nptoningsystem.metadata.v2
+.vs/ProjectEvaluation/nptoningsystem.projects.v2
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.AssemblyInfo.cs
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.AssemblyInfoInputs.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.AssemblyReference.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.GeneratedMSBuildEditorConfig.editorconfig
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpApp/ftpApp/obj/project.nuget.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.AssemblyInfo.cs
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.AssemblyInfoInputs.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.AssemblyReference.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.GeneratedMSBuildEditorConfig.editorconfig
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/project.nuget.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/project.nuget.cache
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
