--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,87 @@ serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorC
 serialDLL/serialApp/serialApp/obj/project.assets.json
 serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
 serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
+.vs/NpToningSystem/FileContentIndex/4368c2bc-0ca8-475f-a896-c805532bd40e.vsidx
+DatabaseManager/obj/Debug/_IsIncrementalBuild
+ftpDLL/ftpApp/ftpApp/bin/Debug/net6.0/ftpApp.deps.json
+ftpDLL/ftpApp/ftpApp/bin/Debug/net6.0/ftpApp.dll
+ftpDLL/ftpApp/ftpApp/bin/Debug/net6.0/ftpApp.exe
+ftpDLL/ftpApp/ftpApp/bin/Debug/net6.0/ftpApp.pdb
+ftpDLL/ftpApp/ftpApp/bin/Debug/net6.0/ftpApp.runtimeconfig.json
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/_IsIncrementalBuild
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.CoreCompileInputs.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.dll
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.genruntimeconfig.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.pdb
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ref/ftpApp.dll
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/refint/ftpApp.dll
+ftpDLL/ftpSim/ftpSim/bin/Debug/net6.0/ftpSim.deps.json
+ftpDLL/ftpSim/ftpSim/bin/Debug/net6.0/ftpSim.dll
+ftpDLL/ftpSim/ftpSim/bin/Debug/net6.0/ftpSim.exe
+ftpDLL/ftpSim/ftpSim/bin/Debug/net6.0/ftpSim.pdb
+ftpDLL/ftpSim/ftpSim/bin/Debug/net6.0/ftpSim.runtimeconfig.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/_IsIncrementalBuild
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.CoreCompileInputs.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.dll
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.genruntimeconfig.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.pdb
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ref/ftpSim.dll
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/refint/ftpSim.dll
+serialDLL/serialApp/serialApp/bin/Debug/net6.0/serialApp.deps.json
+serialDLL/serialApp/serialApp/bin/Debug/net6.0/serialApp.dll
+serialDLL/serialApp/serialApp/bin/Debug/net6.0/serialApp.exe
+serialDLL/serialApp/serialApp/bin/Debug/net6.0/serialApp.pdb
+serialDLL/serialApp/serialApp/bin/Debug/net6.0/serialApp.runtimeconfig.json
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/_IsIncrementalBuild
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/apphost.exe
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/ref/serialApp.dll
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/refint/serialApp.dll
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.CoreCompileInputs.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.dll
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.genruntimeconfig.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.pdb
+SupervisorIfSim/obj/Debug/_IsIncrementalBuild
+SupervisorPcInterface/obj/Debug/_IsIncrementalBuild
+*.exe
+*.exe
+*.cache
+*.txt
+*.editorconfig
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/apphost.exe
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+*.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/apphost.exe
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+*.cache
+*.editorconfig
+*.exe
+*.cache
+*.exe
