注文画面初期表示
キャップタイプのドロップダウンの変更に連動した手動キャッピングチェック処理

--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,6 @@ serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorC
 *.exe
 *.cache
 *.exe
+.vs/NpToningSystem/FileContentIndex/5a804902-9729-4752-97a0-e8e84ed2a1db.vsidx
+.vs/NpToningSystem/FileContentIndex/881ef1cd-8a5b-44a7-a26a-b229d80c7616.vsidx
+.vs/NpToningSystem/FileContentIndex/a6426ffb-78ce-4751-b383-246543ef7e5c.vsidx
