--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,48 @@ serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorC
 .vs/NpToningSystem/FileContentIndex/5a804902-9729-4752-97a0-e8e84ed2a1db.vsidx
 .vs/NpToningSystem/FileContentIndex/881ef1cd-8a5b-44a7-a26a-b229d80c7616.vsidx
 .vs/NpToningSystem/FileContentIndex/a6426ffb-78ce-4751-b383-246543ef7e5c.vsidx
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+MlController/obj/Debug/_IsIncrementalBuild
+*.exe
+*.cache
+*.json
+*.txt
+*.props
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+OrderManager/bin/Debug/Log/OrderManager20220608.log
+OrderManager/bin/Debug/Log/OrderManager20220609.log
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/apphost.exe
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+*.exe
+*.cache
+*.cache
+*.txt
+*.editorconfig
+*.json
