--- a/.gitignore
+++ b/.gitignore
@@ -414,3 +414,33 @@ serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
 serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
 serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
 serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+.vs/NpToningSystem/FileContentIndex/5485ef92-a6d2-4e6b-a69c-0281257ca282.vsidx
+.vs/NpToningSystem/FileContentIndex/5eb6240a-8dd0-44b2-9ff4-741e6df1fc71.vsidx
+.vs/NpToningSystem/FileContentIndex/793a2ff4-deea-4769-8a27-9d5b0b9f9ed6.vsidx
+DatabaseManager/bin/Debug/Log/DatabaseManager20220610.log
+DatabaseManager/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
+.vs/NpToningSystem/FileContentIndex/747bad08-3b4d-4fef-b4fc-57a66a5f2ae2.vsidx
+.vs/NpToningSystem/FileContentIndex/793a2ff4-deea-4769-8a27-9d5b0b9f9ed6.vsidx
+.vs/NpToningSystem/FileContentIndex/9ce4abd5-b07b-478a-9901-def7a73241ca.vsidx
+.vs/NpToningSystem/FileContentIndex/bf006782-8663-4e01-9730-7a4c786c35f2.vsidx
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.assets.cache
+ftpDLL/ftpApp/ftpApp/obj/Debug/net6.0/ftpApp.csproj.FileListAbsolute.txt
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.dgspec.json
+ftpDLL/ftpApp/ftpApp/obj/ftpApp.csproj.nuget.g.props
+ftpDLL/ftpApp/ftpApp/obj/project.assets.json
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/apphost.exe
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.assets.cache
+ftpDLL/ftpSim/ftpSim/obj/Debug/net6.0/ftpSim.csproj.FileListAbsolute.txt
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.dgspec.json
+ftpDLL/ftpSim/ftpSim/obj/ftpSim.csproj.nuget.g.props
+ftpDLL/ftpSim/ftpSim/obj/project.assets.json
+OrderManager/bin/Debug/Log/OrderManager20220610.log
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/apphost.exe
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.assets.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.AssemblyReference.cache
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.csproj.FileListAbsolute.txt
+serialDLL/serialApp/serialApp/obj/Debug/net6.0/serialApp.GeneratedMSBuildEditorConfig.editorconfig
+serialDLL/serialApp/serialApp/obj/project.assets.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.dgspec.json
+serialDLL/serialApp/serialApp/obj/serialApp.csproj.nuget.g.props
