--- a/.gitignore
+++ b/.gitignore
@@ -616,3 +616,18 @@ x64/Debug/serialDLL.dll
 x64/Debug/serialDLL.exp
 x64/Debug/serialDLL.lib
 x64/Debug/serialDLL.pdb
+.vs/NpToningSystem/FileContentIndex/72b2a37d-406d-424b-a2fc-5b8cfc10c27d.vsidx
+.vs/NpToningSystem/FileContentIndex/cfcf54e6-34f4-4f02-921d-ef97afa9321c.vsidx
+.vs/NpToningSystem/FileContentIndex/d18d50d6-140a-4970-8489-e1e98536a605.vsidx
+.vs/NpToningSystem/v17/Browse.VC.db-shm
+.vs/NpToningSystem/v17/Browse.VC.db-wal
+.vs/NpToningSystem/v17/Browse.VC.opendb
+.vs/NpToningSystem/v17/Solution.VC.db-shm
+.vs/NpToningSystem/v17/Solution.VC.db-wal
+OrderManager/bin/Debug/Images/FLA_Logo.bmp
+OrderManager/bin/Debug/Images/JIS_Logo.bmp
+OrderManager/bin/Debug/Images/Label_IDP.bmp
+OrderManager/bin/Debug/Images/Label_NPC.bmp
+OrderManager/bin/Debug/Images/Label_ONE.bmp
+OrderManager/bin/Debug/Images/Label_TMP.bmp
+OrderManager/bin/Debug/Images/TOX_Logo.bmp
