Image画像取得メソッド化

--- a/.gitignore
+++ b/.gitignore
@@ -723,3 +723,6 @@ OrderManager/bin/Debug/zh-CHT/Microsoft.ReportViewer.WebForms.resources.dll
 OrderManager/bin/Debug/zh-CHT/Microsoft.ReportViewer.WinForms.resources.dll
 OrderManager/obj/Debug/NipponPaint.OrderManager.Documents.ReportWorkInstruction.Preview.resources
 OrderManager/obj/Debug/RdlCompile.compiled
+.vs/NpToningSystem/FileContentIndex/65cff0d3-219a-4a0c-8f05-1a4ba8ed5e62.vsidx
+OrderManager/bin/Debug/EnvDTE.xml
+.vs/NpToningSystem/FileContentIndex/dfea5f02-d70c-49d2-911d-a1a5c38ca5a5.vsidx
