--- a/.gitignore
+++ b/.gitignore
@@ -727,3 +727,6 @@ OrderManager/obj/Debug/RdlCompile.compiled
 OrderManager/bin/Debug/EnvDTE.xml
 .vs/NpToningSystem/FileContentIndex/dfea5f02-d70c-49d2-911d-a1a5c38ca5a5.vsidx
 .vs/NpToningSystem/FileContentIndex/28e83324-742e-4e3b-a636-9a158f8a4891.vsidx
+.vs/NpToningSystem/FileContentIndex/6ac6dea0-1d67-4e8e-bfef-79ad5f3f8ffb.vsidx
+.vs/NpToningSystem/FileContentIndex/a42e364f-7af2-45ab-a39e-e229998d0001.vsidx
+.vs/NpToningSystem/FileContentIndex/eb885430-3dc0-457e-a13a-3b8b87fc9ac1.vsidx
