SupervisorPCシミュレータ作成

--- a/.gitignore
+++ b/.gitignore
@@ -730,3 +730,5 @@ OrderManager/bin/Debug/EnvDTE.xml
 .vs/NpToningSystem/FileContentIndex/6ac6dea0-1d67-4e8e-bfef-79ad5f3f8ffb.vsidx
 .vs/NpToningSystem/FileContentIndex/a42e364f-7af2-45ab-a39e-e229998d0001.vsidx
 .vs/NpToningSystem/FileContentIndex/eb885430-3dc0-457e-a13a-3b8b87fc9ac1.vsidx
+.vs/NpToningSystem/FileContentIndex/f6b902cb-0def-4c87-8247-f9b60958d85a.vsidx
+.vs/NpToningSystem/FileContentIndex/cb5ca9c4-9c80-4cd1-9826-1fadd98dccb7.vsidx
